# desktop-buddy

./: NOTES.md  README.md
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: App.svelte
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  lib.rs  main.rs  pet.rs  terminal_watcher.rs  tray.rs
app/src/lib/: bridge.ts
app/src/lib/sprite/: SpriteCanvas.svelte  engine.ts  sheets.ts
app/src/lib/ui/: ContextMenu.svelte  SpeechBubble.svelte  StatsPanel.svelte
app/src/styles/: global.css
sprite-gen/: .pnpmrc.json  generate-cat.mjs  generate-duck.mjs  generate-egg-and-species.mjs  generate-frog.mjs  generate-moods.mjs  generate.mjs  package.json  pnpm-lock.yaml
