[package]
name = "buddy"
version = "0.1.0"
description = "Desktop pet companion"
authors = ["Jason Sutter"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync"] }
notify = "7"
dirs = "6"
log = "0.4"
tauri-plugin-autostart = "2.5.1"
